[package]
name = "rot"
version = "0.1.0"
authors = ["Ryan Greene <rabrg96@gmail.com>"]

# the profile used for 'cargo build'
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for 'cargo build --release'
[profile.release]
panic = "abort" # disable stack unwinding on panic
